# sickchill

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .mypy.ini  .snyk  .xo-config.cjs  .yarnrc.yml  Dockerfile  Gruntfile.js  README.md  ava.config.mjs  cspell.json  docker-compose.yaml  eslint.config.mjs  package.json  pyproject.toml  requirements.txt  setup.cmd  tsconfig.json  webpack.config.js  webpack.config.mjs  xo.config.cjs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml  greetings.yml  python_package.yml  pythonpackage.yml  release.yml  upgrade_dependencies.yml
.run/: Dockerfile.run.xml  pytest.run.xml
.yarn/: .gitignore
contrib/: debian-ubuntu-install.sh  readme.md
contrib/setup-browser-env/: README.md  index.mjs  package.json  xo.config.cjs
contrib/setup-browser-env/test/: index.test.mjs
contrib/setup-browser-env/test/fixtures/: browser-env.config.js
frontend/static/: service-worker.js
sickchill/: init_helpers.py  settings.py
sickchill/gui/slick/js/: ajaxEpSearch.js  ajaxNotifications.js  apibuilder.js  blackwhite.js  browser.js  configProviders.js  core.js  imageSelector.js  parsers.js  plotTooltip.js  ratingTooltip.js  rootDirs.js  sceneExceptionsTooltip.js  testRename.js  trendingShows.js
sickchill/gui/slick/views/: config_postProcessing.mako  config_subtitles.mako
sickchill/oldbeard/notifiers/: rocketchat.py  slack.py
tests/: test_common.py
tests/js/: index.js
types/: index.d.ts
